[metadata]
name = pyqt-hot-reload
version = 1.0.0
author = Your Name
author_email = your.email@example.com
description = Hot reload tool for PyQt applications with UI inspector
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    PyQt6>=6.0.0
    watchdog>=2.1.0

[options.packages.find]
where = src